# se489-mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PHASE1.md  PHASE2.md  PHASE3.md  Phase-3  README.md  dvc.json  environment.yml  generate_sample_wav.py  metrics_report.md  pyproject.toml  requirements.txt  requirements_dev.txt  vertex_jobs.py
.dvc/: config
.github/workflows/: Ci.yml  ci.yml  cml.yml  docker-predict.yml  docker-publish.yml  docker-train.yml  pre-commit.yml  streamlit.yml  tests.yaml
artifacts/: confusion_matrix_cnn.md  history.pkl  model.weights.h5  predictions_cnn.txt  predictions_mlp.txt  scaler.pkl  test_features.npy  test_labels.npy  used_config.yaml  xgboost_model.pkl
conf/: config.yaml
conf/model/: cnn.yaml  mlp.yaml  xgboost.yaml
data/: raw.dvc
dockerfiles/: predict_api.dockerfile  predict_model.dockerfile  streamlit.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_randproject/: __init__.py  cml_eval.py  evaluate.py  model_zoo.py  predict_api.py  predict_torch.py  preprocessing.py  train_model.py
mlops_randproject/api/: predict_api.py
mlops_randproject/conf/: config.yaml
mlops_randproject/data/: data_preprocess.py  data_split.py
mlops_randproject/models/: model.py  model_training.py  predict_model.py
mlops_randproject/profiling/: predict_profile.prof  profile_predict.py  profile_train.py  train_profile.prof
notebooks/: eda_music.ipynb
streamlit/: app.py
tests/: test_evaluation.py  test_prediction.py  test_preprocessing.py  test_training.py
wandb/: latest-run
(+37 files in other folders)
